src/test/resources/purescript_examples/failing/InvalidDerivedInstance2.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith ExpectedTypeConstructor\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSTypeInstanceDeclarationImpl(TypeInstanceDeclaration)
        PsiElement(derive)('derive')
        PsiElement(whitespace)(' ')
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PSIdentifierImpl(identifier)
            PsiElement(identifier)('eqRecord')
            PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PSQualifiedImpl(Qualified)
            PSProperNameImpl(ProperName)
              PsiElement(proper name)('Eq')
              PsiElement(whitespace)(' ')
        PSTypeAtomImpl(TypeAtom)
          PSObjectTypeImpl(ObjectType)
            PsiElement({)('{')
            PSRowImpl(Row)
              <empty list>
            PsiElement(})('}')
            PsiElement(whitespace)('\n')
